add sitemap generator

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
+gems:
+  - jekyll-sitemap
 
 # Site settings
 title: lkblog
@@ -20,6 +22,6 @@ permalink: "/:title/"
 
 # Build settings
 markdown: kramdown
-
+sitemap: true
 sass:
     style: :compressed
