--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: atheus92@gmail.com
 description: Записная книжка одного HTML/CSS кодера # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://egorkir.github.io" # the base hostname & protocol for your site
+url: "http://lkblog.ru" # the base hostname & protocol for your site
 twitter_username: fahrenheitAt
 github_username:  egorkir
 
