--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,30 @@
 Options +Includes +FollowSymLinks -Indexes
 AddDefaultCharset utf-8
+
+# Настройка кеширования файлов
+<ifModule mod_headers.c>
+
+    # кэшировать html и htm файлы на один день
+
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "max-age=43200"
+    </FilesMatch>
+
+    # кэшировать css, javascript и текстовые файлы на одну неделю
+
+    <FilesMatch "\.(js|css|txt)$">
+        Header set Cache-Control "max-age=604800"
+    </FilesMatch>
+
+    # кэшировать флэш и изображения на месяц
+
+    <FilesMatch "\.(flv|swf|ico|gif|jpg|jpeg|png)$">
+        Header set Cache-Control "max-age=2592000"
+    </FilesMatch>
+
+    # отключить кэширование
+
+    <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
+        Header unset Cache-Control
+    </FilesMatch>
+</IfModule>
