--- a/.htaccess
+++ b/.htaccess
@@ -2,29 +2,19 @@ Options +Includes +FollowSymLinks -Indexes
 AddDefaultCharset utf-8
 
 # Настройка кеширования файлов
-<ifModule mod_headers.c>
+<ifModule mod_expires.c>
+    ExpiresActive on
 
-    # кэшировать html и htm файлы на один день
+    # Кеш для изображений
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/ico "access plus 1 month"
 
-    <FilesMatch "\.(html|htm)$">
-        Header set Cache-Control "max-age=43200"
-    </FilesMatch>
+    # Кеш для стилей
+    ExpiresByType text/css "access plus 2 day"
 
-    # кэшировать css, javascript и текстовые файлы на одну неделю
-
-    <FilesMatch "\.(js|css|txt)$">
-        Header set Cache-Control "max-age=604800"
-    </FilesMatch>
-
-    # кэшировать флэш и изображения на месяц
-
-    <FilesMatch "\.(flv|swf|ico|gif|jpg|jpeg|png)$">
-        Header set Cache-Control "max-age=2592000"
-    </FilesMatch>
-
-    # отключить кэширование
-
-    <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
-        Header unset Cache-Control
-    </FilesMatch>
+    # Кеш для JavaScript
+    ExpiresByType application/javascript "access plus 2 day"
 </IfModule>
