--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "author": "@deeppines",
   "license": "ISC",
-  "packageManager": "yarn@4.5.2",
+  "packageManager": "yarn@4.5.3",
   "dependencies": {
     "normalize.css": "8.0.1"
   },
   "devDependencies": {
+    "sass": "1.81.0",
     "typescript": "5.6.3",
-    "vite": "5.4.11",
-    "sass": "1.81.0"
+    "vite": "5.4.11"
   }
 }
