--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "normalize.css": "8.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "9.15.0",
+    "eslint": "9.15.0",
+    "globals": "15.12.0",
     "sass": "1.81.0",
     "typescript": "5.6.3",
+    "typescript-eslint": "8.16.0",
     "vite": "5.4.11"
   }
 }
