--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "lint": "eslint --fix \"./src/**/*.ts*\"",
+    "fix": "yarn lint && yarn format"
   },
   "author": "@deeppines",
   "license": "ISC",
@@ -18,6 +21,7 @@
     "@eslint/js": "9.15.0",
     "eslint": "9.15.0",
     "globals": "15.12.0",
+    "prettier": "3.4.1",
     "sass": "1.81.0",
     "typescript": "5.6.3",
     "typescript-eslint": "8.16.0",
