--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "preview": "vite preview",
     "format": "prettier --write .",
     "lint": "eslint --fix \"./src/**/*.ts*\"",
-    "fix": "yarn lint && yarn format"
+    "fix": "yarn lint && yarn format",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,json,jsx,css,scss,md,mdx,ts,tsx,yml}": "yarn run fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "post-commit": "git update-index --again"
+    }
   },
   "author": "@deeppines",
   "license": "ISC",
@@ -21,6 +31,8 @@
     "@eslint/js": "9.15.0",
     "eslint": "9.15.0",
     "globals": "15.12.0",
+    "husky": "9.1.7",
+    "lint-staged": "15.2.10",
     "prettier": "3.4.1",
     "sass": "1.81.0",
     "typescript": "5.6.3",
