--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "packageManager": "yarn@4.5.3",
   "dependencies": {
+    "@tabler/icons": "3.24.0",
     "normalize.css": "8.0.1"
   },
   "devDependencies": {
