--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@commitlint/config-conventional": "19.6.0",
     "@eslint/js": "9.17.0",
     "eslint": "9.17.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-simple-import-sort": "12.1.1",
     "globals": "15.13.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
