--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@components/*": ["./src/ui/components/*"],
+      "@layouts/*": ["./src/ui/layouts/*"]
+    }
   },
   "include": ["src"]
 }
