--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "9.17.0",
     "eslint": "9.17.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-unused-imports": "4.1.4",
     "globals": "15.14.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
