--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write .",
     "lint": "eslint --fix \"./src/**/*.ts*\"",
     "fix": "yarn lint && yarn format",
+    "check": "yarn && yarn lint && yarn build && yarn dev",
     "prepare": "husky"
   },
   "lint-staged": {
