--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview",
     "format": "prettier --write .",
     "lint": "eslint --fix \"./src/**/*.ts*\"",
-    "fix": "yarn lint && yarn format",
-    "check": "yarn && yarn lint && yarn build && yarn start",
+    "fix": "yarn lint && yarn format && jest --passWithNoTests",
+    "check": "yarn && yarn lint && jest --passWithNoTests && yarn build && yarn start",
+    "test": "jest --watch",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -31,14 +32,22 @@
     "normalize.css": "8.0.1"
   },
   "devDependencies": {
+    "@babel/core": "7.27.4",
+    "@babel/preset-env": "7.27.2",
+    "@babel/preset-typescript": "7.27.1",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@eslint/js": "9.29.0",
+    "@types/babel__core": "7.20.5",
+    "@types/babel__preset-env": "7.10.0",
+    "@types/jest": "30.0.0",
+    "babel-jest": "30.0.2",
     "eslint": "9.29.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.2.0",
     "husky": "9.1.7",
+    "jest": "30.0.2",
     "lint-staged": "16.1.2",
     "prettier": "3.6.0",
     "rollup-plugin-visualizer": "6.0.3",
